# learn_bl

./: .gitignore  PROGRESS.md  patch_header.py
app/: .gitignore  Cargo.toml  memory.x
app/.cargo/: config.toml
app/.zed/: settings.json
app/src/: firmware.rs  lib.rs  main.rs
app/tests/: integration.rs
bootloader/: .gitignore  CLAUDE.md  Cargo.toml  build.rs  learn_note.txt  memory.x  omp-session-2026-06-05T05-28-41-253Z_019e9641-4825-7000-98a6-e0c6d394973d.html  stm32f439.svd.svd
bootloader/.cargo/: config.toml
bootloader/notebook/: LSP假阳性报错.md  STM32 USB CDC 虚拟串口配置笔记.md
bootloader/notebook/.obsidian/: workspace.json
bootloader/src/: bl.rs  bootloader.rs  config.rs  crc.rs  firmware.rs  flash.rs  lib.rs  main.rs  pac.rs  queue.rs
